new attempt with modified dockerfile